added additional tmux binding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,7 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # split panes using | and -
 bind | split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 # reload config file (change file location to your the tmux.conf you want to use)
