updated tmux true color config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,8 @@
 set -g mouse on
 
-# https://www.elliottchenstudio.com/blog/neovim-true-color
-# only this line might not be enough
-set -g default-terminal "xterm-256color"
-
-#Needs this line also to overrides the default color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6#tmuxs
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 
 # split panes using | and -
