--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -6,6 +6,11 @@
   },
   "ui_font_size": 16,
   "buffer_font_size": 16,
+  "terminal": {
+    "env": {
+      "DISABLE_STARSHIP": "1"
+    }
+  },
   "wrap_guides": [80, 120],
   "languages": {
     "Python": {
