--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -1,4 +1,5 @@
 {
+  "vim_mode": false,
   "theme": {
     "mode": "system",
     "light": "Catppuccin Latte",
@@ -7,6 +8,7 @@
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "wrap_guides": [80, 120],
+  "format_on_save": "on",
   "languages": {
     "Python": {
       "formatter": {
@@ -14,8 +16,7 @@
           "command": "black",
           "arguments": ["-"]
         }
-      },
-      "format_on_save": "on"
+      }
     }
   },
   "lsp": {
