--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -11,12 +11,14 @@
   "format_on_save": "on",
   "languages": {
     "Python": {
-      "formatter": {
-        "external": {
-          "command": "black",
-          "arguments": ["-"]
+      "format_on_save": "on",
+      "formatter": [
+        {
+          "language_server": {
+            "name": "ruff"
+          }
         }
-      }
+      ]
     }
   },
   "lsp": {
