--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,4 +13,8 @@ bind - split-window -v
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
