zed: fix formatting with ruff

--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -12,13 +12,12 @@
   "languages": {
     "Python": {
       "format_on_save": "on",
-      "formatter": [
-        {
-          "language_server": {
-            "name": "ruff"
-          }
+      "formatter": {
+        "external": {
+          "command": "ruff",
+          "arguments": ["format", "-"]
         }
-      ]
+      }
     }
   },
   "lsp": {
