--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -5,6 +5,7 @@
     "light": "Catppuccin Latte",
     "dark": "Catppuccin Mocha"
   },
+  "show_whitespaces": "all",
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "wrap_guides": [80, 120],
