tmux: set history limit

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 set-option -g prefix2 C-space
 
+set-option -g history-limit 5000
 set -g mouse on
 
 # https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6#tmuxs
